fix: medico controlle